[tool.poetry]
name = "valedger"
version = "0.0.1"
description = "Yet another personal finance manager"
authors = ["Bernard Siebens <bernard@siebens.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
