[tool.poetry]
name = "valedger"
version = "0.0.1"
description = "Yet another personal finance manager"
authors = ["Bernard Siebens <bernard@siebens.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
django-environ = "^0.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
